@@ -1,3 +1,8 @@
+2003-10-16  Sam Steingold  <sds@gnu.org>
+
+	* win32.lisp (MAX_PATH): new constant
+	(GetModuleFileNameA, GetModuleHandleA): new functions
+
 2003-10-14  Sam Steingold  <sds@gnu.org>
 
 	* stream.d (buffered_nextbyte): return -1 only when no_hang
